<resources>
    <string name="app_name">MeteoRa</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="weatherdescribtion">Weatger Describtion</string>
    <string name="weather_icon">Weather Icon</string>
    <string name="cityNameTextView">CityNameTextView</string>
    <string name="back">Back</string>
    <string name="add">Add</string>
    <string name="pressure">pressure</string>
    <string name="humidity">humidity</string>
    <string name="wind">wind</string>
    <string name="cloud">cloud</string>
    <string name="min_temp_icon">min_temp_icon</string>
    <string name="max_temp_icon">max_temp_icon</string>
    <string name="sunrise">sunrise</string>
    <string name="sunset">sunset</string>
    <string name="choose_location">choosefrommap</string>
    <string name="humidity1">Humidity:</string>
    <string name="coluds">Clouds:</string>
    <string name="wind1">Wind:</string>
    <string name="pressure1">Pressure:</string>
    <string name="d">details</string>
    <string name="details">detalis</string>
    <string name="delete">delete</string>
</resources>